# clingen-ai

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: analyze_vcf.py  app.py  ingest_knowledge.py  rag_agent.py
